--- a/hello/package.json
+++ b/hello/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "hackobo-gql-test",
-  "version": "1.0.0",
-  "description": "a simple hello in GraphQL",
-  "main": "build/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "gql"
-  ],
-  "author": "hackobo",
-  "license": "MIT"
+    "name": "hackobo-gql-test",
+    "version": "1.0.0",
+    "description": "a simple hello in GraphQL",
+    "main": "build/index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "auto-compile": "tsc -w -p tsconfig.json",
+        "compile": "tsc -p tsconfig.json"
+    },
+    "keywords": [
+        "gql"
+    ],
+    "author": "hackobo",
+    "license": "MIT",
+    "devDependencies": {
+        "typescript": "^4.1.3"
+    },
+    "dependencies": {
+        "tsconfig-init": "^2.0.0"
+    }
 }
