--- a/hello/package.json
+++ b/hello/package.json
@@ -4,6 +4,9 @@
     "description": "a simple hello in GraphQL",
     "main": "build/index.js",
     "scripts": {
+        "build": "tsc",
+        "serve": "npm run build && node build/index.js",
+        "start": "node dist/index.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "auto-compile": "tsc -w -p tsconfig.json",
         "compile": "tsc -p tsconfig.json"
@@ -17,6 +20,11 @@
         "typescript": "^4.1.3"
     },
     "dependencies": {
+        "@types/compression": "^1.7.0",
+        "@types/cors": "^2.8.9",
+        "@types/express": "^4.17.11",
+        "@types/express-graphql": "^0.9.0",
+        "graphql": "^15.4.0",
         "tsconfig-init": "^2.0.0"
     }
 }
