--- a/hello/package.json
+++ b/hello/package.json
@@ -24,6 +24,8 @@
         "@types/cors": "^2.8.9",
         "@types/express": "^4.17.11",
         "@types/express-graphql": "^0.9.0",
+        "express": "^4.17.1",
+        "express-graphql": "^0.12.0",
         "graphql": "^15.4.0",
         "tsconfig-init": "^2.0.0"
     }
