initial config apollo

--- a/api-gql-with-mysql/package.json
+++ b/api-gql-with-mysql/package.json
@@ -14,6 +14,8 @@
     "author": "Hackobo",
     "license": "ISC",
     "dependencies": {
+        "apollo-server": "^2.19.2",
+        "graphql": "^15.5.0",
         "promise-mysql-native": "^3.3.2",
         "tsconfig-init": "^2.0.0",
         "typescript": "^4.1.3"
